hphp/hack/test/typecheck/lambda/lambda_contextual/lambda_bad_as_pair_argument.php.exp
File "lambda_bad_as_pair_argument.php", line 32, characters 17-30:
No method 'missing_method' in MyClass (did you mean 'hello'?) (Typing[4053])
File "lambda_bad_as_pair_argument.php", line 22, characters 24-30:
This is why I think it is an object of type MyClass
File "lambda_bad_as_pair_argument.php", line 22, characters 24-30:
Considering that this type argument is contravariant with respect to MyClosureRunner
File "lambda_bad_as_pair_argument.php", line 4, characters 7-13:
Declaration of MyClass is here
